# fast-api-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
compose/local/app/: Dockerfile  run-migrations  start-app
compose/prod/app/: Dockerfile  start
config/: local.dist.ini
src/app/: __main__.py
src/app/application/common/: __init__.py  exceptions.py  pagination.py
src/app/application/posts/: __init__.py  interfaces.py  schemas.py
src/app/infrastructure/config/: __init__.py  dto.py  parser.py
src/app/infrastructure/core/: enums.py
src/app/infrastructure/database/: main.py
src/app/infrastructure/database/migrations/: env.py
src/app/infrastructure/database/migrations/versions/: dedf42b3be3a_posts.py
src/app/infrastructure/database/models/: __init__.py  base.py  posts.py
src/app/infrastructure/database/repositories/: __init__.py  base.py  posts.py
src/app/infrastructure/database/types/: postgres.py
src/app/infrastructure/implementation/posts/: __init__.py  services.py
src/app/infrastructure/logger/: __init__.py  enums.py
src/app/infrastructure/logger/formatters/: __init__.py  main.py
src/app/presentation/api/v1/: __init__.py  __main__.py
src/app/presentation/api/v1/controllers/: main.py  posts.py
src/app/presentation/api/v1/middlewares/: __init__.py  main.py  request_context.py
src/app/presentation/api/v1/providers/: __init__.py  main.py  posts.py
tests/: factories.py
tests/integration/: conftest.py
tests/integration/infrastructure/database/: test_migrations_and_revisions.py
tests/mocks/: permissions.py
tests/unittests/: test_example.py
